fixing openapi spec gen + added spec validation tests
